Update hero.astro with blogs link

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -8,14 +8,7 @@ import { Icon } from "astro-icon/components";
 <main
   class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
   <div class="py-6 md:order-1 hidden md:block">
-    <!-- <Picture
-      src={heroImage}
-      alt="C4Giving Image"
-      widths={[200, 400, 600]}
-      sizes="(max-width: 800px) 100vw, 620px"
-      loading="eager"
-      format="avif"
-    /> -->
+    <!-- Your image placeholder -->
   </div>
   <div>
     <h1
@@ -23,29 +16,16 @@ import { Icon } from "astro-icon/components";
       C4Giving
     </h1>
     <p class="text-lg mt-4 text-slate-600 max-w-xl">
-    About C4Giving...
+      About C4Giving...
     </p>
-    <!-- <div class="mt-6 flex flex-col sm:flex-row gap-3">
+    <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
-        href="#"
-        href="https://web3templates.com/templates/astroship-starter-website-template-for-astro"
-        target="_blank"
+        href="/blogs"
         class="flex gap-1 items-center justify-center"
         rel="noopener">
-        <Icon class="text-white w-5 h-5" name="bx:bxs-cloud-download" />
-
-         Download for Free
+        <Icon class="text-white w-5 h-5" name="bx:bx-book" /> <!-- Assuming you want a book icon for blogs -->
+        Visit Our Blog
       </Link>
-      <Link
-        size="lg"
-        style="outline"
-        rel="noopener"
-        href="https://github.com/surjithctly/astroship"
-        class="flex gap-1 items-center justify-center"
-        target="_blank">
-        <Icon class="text-black w-4 h-4" name="bx:bxl-github" />
-         GitHub Repo
-      </Link>
-    </div> -->
+    </div>
   </div>
 </main>
