--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -20,10 +20,10 @@ import { Icon } from "astro-icon/components";
     </p>
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
-        href="/blogs"
+        href="/blog"
         class="flex gap-1 items-center justify-center"
         rel="noopener">
-        <Icon class="text-white w-5 h-5" name="bx:bx-book" /> <!-- Assuming you want a book icon for blogs -->
+        <Icon class="text-white w-5 h-5" name="bx:bx-book" /> <!-- Assuming you want a book icon for blog -->
         Visit Our Blog
       </Link>
     </div>
