--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -6,41 +6,34 @@ import PricingCard from "@components/pricing.astro";
 
 const pricing = [
   {
-    name: "Personal",
-    price: "Free",
+    name: "Dell Latitude 5400 Chrome i5",
+    price: "$375.00",
     popular: false,
     features: [
-      "Lifetime free",
-      "Up to 3 users",
-      "Unlimited Pages",
-      "Astro Sub domain",
-      "Basic Integrations",
-      "Community Support",
+      "Intel(R) Core(TM) i5-8365U CPU @ 1.60GHz (8 threads, 4.10GHz)",
+      "16 G memory",
+      "Refurbished ",
+      "Available to Rent",
+      "Updates and Support",
     ],
     button: {
-      text: "Get Started",
+      text: "Learn More",
       link: "/",
     },
   },
   {
-    name: "Startup",
-    price: {
-      monthly: "$19",
-      annual: "$16",
-      discount: "10%",
-      original: "$24",
-    },
+    name: "Dell Latitude 5400 Chrome i3",
+    price: "$300.00",
     popular: true,
     features: [
-      "All Free Features",
-      "Up to 20 users",
-      "20 Custom domains",
-      "Unlimited Collaborators",
-      "Advanced Integrations",
-      "Priority Support",
+      "Intel Core i3-8145U @2.10 Ghz (4 threads 3.9Ghz)",
+      "8 G memory",
+      "Refurbished ",
+      "Available to Rent",
+      "Updates and Support",
     ],
     button: {
-      text: "Get Started",
+      text: "Learn More",
       link: "#",
     },
   },
