--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -6,15 +6,15 @@ import PricingCard from "@components/pricing.astro";
 
 const pricing = [
   {
-    name: "Dell Latitude 5400 Chrome i5",
-    price: "$375.00",
+    name: "Purchase",
+    price: "$275.00 - $375.00",
     popular: false,
     features: [
-      "Intel(R) Core(TM) i5-8365U CPU @ 1.60GHz (8 threads, 4.10GHz)",
-      "16 G memory",
+      "i5 and i3 Processors in Stock",
+      "8 - 16 G Memory",
       "Refurbished ",
-      "Available to Rent",
-      "Updates and Support",
+      "Available",
+      "Updates and Support Available Long Term",
     ],
     button: {
       text: "Learn More",
@@ -22,7 +22,7 @@ const pricing = [
     },
   },
   {
-    name: "Dell Latitude 5400 Chrome i3",
+    name: "Rental",
     price: "$300.00",
     popular: true,
     features: [
