--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -24,10 +24,10 @@ const pricing = [
   {
     name: "Rental",
     price: {
-      1 to 10 Devices: "$25/day",
-      10 to 25 Devices: "$23/day",
-      25 to 50 Devices: "$20/day",
-      50+ Devices:       "Contact Us",
+      "1 to 10 Devices": "$25/day",
+      "10 to 25 Devices": "$23/day",
+      "25 to 50 Devices": "$20/day",
+      "50+ Devices":       "Contact Us",
     },
     popular: true,
     features: [
