--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -7,11 +7,12 @@ import PricingCard from "@components/pricing.astro";
 const pricing = [
   {
     name: "Purchase",
-    price: "$275.00 - $375.00",
+    price: " ",
     popular: false,
     features: [
+      "Price Averages $275.00 - $375.00",
       "i5 and i3 Processors in Stock",
-      "8 - 16 G Memory",
+      "8G-16G Memory",
       "Refurbished ",
       "Available",
       "Updates and Support Available Long Term",
@@ -28,6 +29,8 @@ const pricing = [
       "10 to 25 Devices": "$23/day",
       "25 to 50 Devices": "$20/day",
       "50+ Devices":       "Contact Us",
+      " ":                 " ", 
+      " ":                 " ", 
     },
     popular: true,
     features: [
@@ -43,12 +46,15 @@ const pricing = [
   },
   {
     name: "Community Coaching Events",
-    price: "Custom",
+    price: " ",
     popular: false,
     features: [
       "Technologies To Boost Your Business",
       "Held at the Venue of Your Choice",
       "20+ Years Experience",
+      " ":                 " ", 
+      " ":                 " ", 
+      " ":                 " ",
     ],
     button: {
       text: "Contact us",
