--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -1,4 +1,3 @@
----
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
@@ -7,13 +6,13 @@ import PricingCard from "@components/pricing.astro";
 const pricing = [
   {
     name: "Purchase",
-    price: " ",
+    price: "Varies",
     popular: false,
     features: [
       "Price Averages $275.00 - $375.00",
       "i5 and i3 Processors in Stock",
       "8G-16G Memory",
-      "Refurbished ",
+      "Refurbished",
       "Available",
       "Updates and Support Available Long Term",
     ],
@@ -28,15 +27,13 @@ const pricing = [
       "1 to 10 Devices": "$25/day",
       "10 to 25 Devices": "$23/day",
       "25 to 50 Devices": "$20/day",
-      "50+ Devices":       "Contact Us",
-      " ":                 " ", 
-      " ":                 " ", 
+      "50+ Devices": "Contact Us",
     },
     popular: true,
     features: [
       "Delivery Available",
       "Set Up Available",
-      "Like New Refurbished ",
+      "Like New Refurbished",
       "Technical Support Available",
     ],
     button: {
@@ -46,15 +43,12 @@ const pricing = [
   },
   {
     name: "Community Coaching Events",
-    price: " ",
+    price: "Contact for Pricing",
     popular: false,
     features: [
       "Technologies To Boost Your Business",
       "Held at the Venue of Your Choice",
       "20+ Years Experience",
-      " ":                 " ", 
-      " ":                 " ", 
-      " ":                 " ",
     ],
     button: {
       text: "Contact us",
@@ -62,7 +56,6 @@ const pricing = [
     },
   },
 ];
----
 
 <Layout title="Pricing">
   <Container>
