--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -1,18 +1,18 @@
+---
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
 import PricingCard from "@components/pricing.astro";
 
-const pricing = [ 
+const pricing = [
   {
     name: "Purchase",
-    price: "Varies",
+    price: "$275.00 - $375.00",
     popular: false,
     features: [
-      "Price Averages $275.00 - $375.00",
       "i5 and i3 Processors in Stock",
-      "8G-16G Memory",
-      "Refurbished",
+      "8 - 16 G Memory",
+      "Refurbished ",
       "Available",
       "Updates and Support Available Long Term",
     ],
@@ -27,13 +27,13 @@ const pricing = [
       "1 to 10 Devices": "$25/day",
       "10 to 25 Devices": "$23/day",
       "25 to 50 Devices": "$20/day",
-      "50+ Devices": "Contact Us",
+      "50+ Devices":       "Contact Us",
     },
     popular: true,
     features: [
       "Delivery Available",
       "Set Up Available",
-      "Like New Refurbished",
+      "Like New Refurbished ",
       "Technical Support Available",
     ],
     button: {
@@ -43,7 +43,7 @@ const pricing = [
   },
   {
     name: "Community Coaching Events",
-    price: "Contact for Pricing",
+    price: "Custom",
     popular: false,
     features: [
       "Technologies To Boost Your Business",
