--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -7,7 +7,7 @@ import PricingCard from "@components/pricing.astro";
 const pricing = [
   {
     name: "Purchase",
-    price: "$275.00 - $375.00",
+  //  price: "$275.00 - $375.00",
     popular: false,
     features: [
       "i5 and i3 Processors in Stock",
@@ -43,7 +43,7 @@ const pricing = [
   },
   {
     name: "Community Coaching Events",
-    price: "Custom",
+  //  price: "Custom",
     popular: false,
     features: [
       "Technologies To Boost Your Business",
