--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -23,18 +23,14 @@ const pricing = [
   },
   {
     name: "Rental",
-    price: {
-      "1 to 10 Devices": "$25/day",
-      "10 to 25 Devices": "$23/day",
-      "25 to 50 Devices": "$20/day",
-      "50+ Devices":       "Contact Us",
-    },
+   // price: " ",
     popular: true,
     features: [
-      "Delivery Available",
-      "Set Up Available",
-      "Like New Refurbished ",
-      "Technical Support Available",
+      "1 to 10 Devices:   $25/day",
+      "10 to 25 Devices:  $23/day",
+      "25 to 50 Devices": $20/day",
+      "50+ Devices":       "Contact Us",
+    },
     ],
     button: {
       text: "Learn More",
