--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -26,10 +26,10 @@ const pricing = [
    // price: " ",
     popular: true,
     features: [
-      "1 to 10 Devices:   $25/day",
-      "10 to 25 Devices:  $23/day",
-      "25 to 50 Devices": $20/day",
-      "50+ Devices":       "Contact Us",
+      "1 to 10 Devices   -  $25/day",
+      "10 to 25 Devices  -  $23/day",
+      "25 to 50 Devices  -  $20/day",
+      "50+ Devices       -  Contact Us",
     ],
     button: {
       text: "Learn More",
