--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -23,7 +23,7 @@ import { Icon } from "astro-icon/components";
         href="/blog"
         class="flex gap-1 items-center justify-center"
         rel="noopener">
-        <Icon class="text-white w-5 h-5" name="bx:bx-book" /> <!-- Assuming you want a book icon for blog -->
+        <Icon class="text-white w-5 h-5" name="bx:bx-book" /> 
         Visit Our Blog
       </Link>
     </div> --->
