--- a/src/pages/mission.astro
+++ b/src/pages/mission.astro
@@ -4,17 +4,12 @@ import { Picture } from "astro:assets";
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
-
-// Filter team entries with 'draft: false' & date before current date
-const publishedTeamMembers = await getCollection("team", ({ data }) => {
-  return !data.draft && data.publishDate < new Date();
-});
 ---
 
 <Layout title="About">
   <Container>
     <Sectionhead>
-      <Fragment slot="title">About</Fragment>
+      <Fragment slot="title">Mission</Fragment>
       <Fragment slot="desc">We are a small passionate team.</Fragment>
     </Sectionhead>
 
@@ -26,14 +21,6 @@ const publishedTeamMembers = await getCollection("team", ({ data }) => {
 At C4 we are dedicated to supporting and educating individuals within our community as well as non-profit organizations on managing their technological needs with expertise and compassion. We understand the unique digital literacy and security challenges faced by everyone in today's digital world, and we strive to provide tailored solutions that empower individuals and organizations to focus on their personal growth and core missions.
       </p>
     </div>
-
-
-            <div class="mt-4 text-center">
-              <h2 class="text-lg text-gray-800">{teamMemberEntry.data.name}</h2>
-              <h3 class="text-sm text-slate-500">
-                {teamMemberEntry.data.title}
-              </h3>
-            </div>
           </div>
         ))
       }
