--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -18,6 +18,10 @@ const menuitems = [
       title: "Pricing",
       path: "/pricing",
     },
+   {
+     title: "Mission",
+     path: "/mission",
+   },
  // {
  //   title: "About",
  //   path: "/about",
