--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -11,8 +11,7 @@ const pricing = [
     popular: false,
     features: [
       "i5 and i3 Processors in Stock",
-      "8 - 16 G Memory",
-      "Refurbished ",
+      "8G-16G Memory",
       "Updates and Support Available Long Term",
     ],
     button: {
