--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -5,14 +5,13 @@ import Link from "@components/ui/link.astro";
 import { Icon } from "astro-icon/components";
 ---
 
-<main
-  class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
+<main class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
   <div class="py-6 md:order-1 hidden md:block">
-    <!-- Your image placeholder -->
+    <!-- Displaying your image -->
+    <Picture class="w-full h-auto" src={heroImage} alt="Hero image" />
   </div>
   <div>
-    <h1
-      class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
+    <h1 class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
       C4Giving
     </h1>
     <p class="text-lg mt-4 text-slate-600 max-w-xl">
