--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -15,7 +15,7 @@ import { Icon } from "astro-icon/components";
       C4Giving
     </h1>
     <p class="text-lg mt-4 text-slate-600 max-w-xl">
-      About C4Giving...
+      Empowering Communities with Compassionate Tech Solutions
     </p>
   </div>
 </main>
