--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -12,7 +12,7 @@ import { Icon } from "astro-icon/components";
   </div>
   <div>
     <h1 class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
-      C4Giving
+      C4 = Community Commodity Computer Coaching
     </h1>
     <p class="text-lg mt-4 text-slate-600 max-w-xl">
       Empowering Communities with Compassionate Tech Solutions
