--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -11,12 +11,11 @@ import { Icon } from "astro-icon/components";
     <Picture class="w-full h-auto" src={heroImage} alt="Hero image" />
   </div>
   <div>
-    <h1 class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
+ <!---   <h1 class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
       C4giving
-    </h1>
-      
+    </h1> --->
+    Community Commodity Computer Coaching
     <p class="text-lg mt-4 text-slate-600 max-w-xl">
-      Community Commodity Computer Coaching
       Empowering Communities with Compassionate Tech Solutions
     </p>
   </div>
