--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -6,10 +6,10 @@ import { Icon } from "astro-icon/components";
 ---
 
 <main class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
-   <!---   <div class="py-6 md:order-1 hidden md:block">
+   <!---   <div class="py-6 md:order-1 hidden md:block"> --->
     <!-- Displaying your image -->
-<Picture class="w-full h-auto" src={heroImage} alt="Hero image" />
-  </div> -->
+<Picture class="w-full h-auto" src={heroImage} alt="Hero image" />  --->
+<!---  </div> --->
   <div>
  <!---   <h1 class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
       C4giving
