--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -14,6 +14,11 @@ const menuitems = [
  //     { title: "404 Page", path: "/404" },
  //   ],
  // },
+    
+    {
+      title: "Rent For Events",
+      path: "/rent",
+    },
     {
       title: "Pricing",
       path: "/pricing",
