--- a/src/pages/rent.astro
+++ b/src/pages/rent.astro
@@ -11,7 +11,7 @@ import Sectionhead from "@components/sectionhead.astro";
   <Container>
     <Sectionhead>
       <Fragment slot="title">Rent</Fragment>
-      <Fragment slot="desc">We are a small passionate team.</Fragment>
+      <Fragment slot="desc">Renting Chromebooks to Nonprofits</Fragment>
     </Sectionhead>
 
     <div class="flex flex-col gap-3 mx-auto max-w-4xl mt-16">
@@ -40,7 +40,6 @@ import Sectionhead from "@components/sectionhead.astro";
     </style>
 </head>
 <body>
-    <h1>Renting Chromebooks for Nonprofits</h1>
     <p>Renting Chromebooks for infrequent events can make more sense for nonprofits compared to buying them for several reasons:</p>
     <ul>
         <li><strong>Cost-effectiveness:</strong> Renting is generally more cost-effective for short-term needs, especially if the event is not frequent. The upfront cost of purchasing Chromebooks can be high, whereas renting allows nonprofits to only pay for the time they need the devices.</li>
