--- a/src/pages/rent.astro
+++ b/src/pages/rent.astro
@@ -1,4 +1,4 @@
-----
+---
 import { getCollection } from "astro:content";
 import { Picture } from "astro:assets";
 import Layout from "@layouts/Layout.astro";
@@ -6,11 +6,11 @@ import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
 import { Picture } from "astro:assets";
 import heroImage from "assets/rent_logo.png";
-----
+---
 <Layout title="Rent">
   <Container>
     <Sectionhead>
-      <Fragment slot="title">C4</Fragment>
+      <Fragment slot="title">Mission</Fragment>
       <Fragment slot="desc">Rentals</Fragment>
     </Sectionhead>
 
@@ -60,7 +60,7 @@ import heroImage from "assets/rent_logo.png";
         <li><strong>Environmental Considerations:</strong> Renting can also be seen as a more environmentally friendly option, as it reduces the need for the production of new devices and the disposal of old ones.</li>
         <li><strong>Avoiding Obsolescence:</strong> Technology, including Chromebooks, can become outdated quickly. Renting can help nonprofits avoid the issue of owning obsolete technology, as they can rent newer models as needed.</li>
     </ul>
-    <p>Renting Chromebooks can provide a more cost-effective, flexible, and hassle-free solution for nonprofits that need devices for infrequent events.</p>
+    <p>In summary, renting Chromebooks can provide a more cost-effective, flexible, and hassle-free solution for nonprofits that need devices for infrequent events.</p>
 </body>
 </html>
   </Container>
