--- a/src/pages/rent.astro
+++ b/src/pages/rent.astro
@@ -10,7 +10,8 @@ import heroImage from "assets/rent_logo.png";
 <Layout title="Rent">
   <Container>
     <Sectionhead>
-      <Fragment slot="desc">Rentals</Fragment>
+      <Fragment slot="title">Rentals</Fragment>
+      <Fragment slot="desc">For Nonprofits</Fragment>
     </Sectionhead>
 
 <!DOCTYPE html>
