--- a/src/pages/rent.astro
+++ b/src/pages/rent.astro
@@ -5,7 +5,7 @@ import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
 import { Picture } from "astro:assets";
-import heroImage from "assets/rent_logo.png";
+import heroImage from "assets/rental_logo.png";
 ---
 <Layout title="Rent">
   <Container>
