--- a/src/pages/rent.astro
+++ b/src/pages/rent.astro
@@ -48,7 +48,7 @@ import heroImage from "assets/rental_logo.logo";
 </head>
 <body>
     <div class="logo-container">
-        <Picture class="w-full h-auto" src={heroImage} alt="Rental image" />
+        <Picture class="logo" src={heroImage} alt="Rental image" />
     </div>
     <ul>
         <li><strong>Cost-effectiveness:</strong> Renting is generally more cost-effective for short-term needs, especially if the event is not frequent. The upfront cost of purchasing Chromebooks can be high, whereas renting allows nonprofits to only pay for the time they need the devices.</li>
