--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,6 +1,6 @@
 ---
 import { Picture } from "astro:assets";
-import heroImage from "assets/14732087.jpeg";
+import heroImage from "assets/main_logo.png";
 import Link from "@components/ui/link.astro";
 import { Icon } from "astro-icon/components";
 ---
