--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -4,11 +4,23 @@ import heroImage from "assets/main_logo.png";
 import Link from "@components/ui/link.astro";
 import { Icon } from "astro-icon/components";
 ---
-
+ <style>
+    .logo-container {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 20px;
+    }
+    .logo {
+        width: 256px;
+        height: 256px;
+    }
+</style>
 <main class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
    <!---   <div class="py-6 md:order-1 hidden md:block"> --->
     <!-- Displaying your image -->
-<Picture class="w-full h-auto" src={heroImage} alt="Hero image" />
+    <div class="logo-container">
+        <Picture class="logo" src={heroImage} alt="Hero image" />
+    </div>
 <!---  </div> --->
   <div>
  <!---   <h1 class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
