--- a/src/pages/mission.astro
+++ b/src/pages/mission.astro
@@ -1,10 +1,22 @@
 ---
 import { getCollection } from "astro:content";
 import { Picture } from "astro:assets";
+import heroImage from "assets/mission_logo.png";
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
 ---
+ <style>
+    .logo-container {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 20px;
+    }
+    .logo {
+        width: 256px;
+        height: 256px;
+    }
+</style>
 
 <Layout title="About">
   <Container>
@@ -12,7 +24,10 @@ import Sectionhead from "@components/sectionhead.astro";
       <Fragment slot="title">Mission</Fragment>
       <Fragment slot="desc">We are a small passionate team.</Fragment>
     </Sectionhead>
-
+    
+<div class="logo-container">
+        <Picture class="logo" src={heroImage} alt="Mission image" />
+    </div>
     <div class="flex flex-col gap-3 mx-auto max-w-4xl mt-16">
       <h2 class="font-bold text-3xl text-gray-800">
         Our Mission
