--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const { title } = Astro.props;
 
 const makeTitle = title
   ? title + " | " + "c4giving"
-  : "c4giving - Starter Template for Astro with Tailwind CSS";
+  : "c4giving";
 ---
 
 <!DOCTYPE html>
