fixed pricing page

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -20,7 +20,7 @@ const menuitems = [
       path: "/rent",
     },
     {
-      title: "Pricing",
+      title: "Chromebooks",
       path: "/pricing",
     },
    {
