--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -6,13 +6,14 @@ import PricingCard from "@components/pricing.astro";
 
 const pricing = [
   {
-    name: "Purchase",
-  //  price: "$275.00 - $375.00",
+    name: "Requested Donation for Chromebooks",
+    //price: "$275.00 - $375.00",
     popular: false,
     features: [
       "i5 and i3 Processors in Stock",
       "8G-16G Memory",
       "Updates and Support Available Long Term",
+      "$275.00 - $375.00"
     ],
     button: {
       text: "Learn More",
@@ -24,9 +25,9 @@ const pricing = [
    // price: " ",
     popular: true,
     features: [
-      "1 to 10 Devices   -  $25/day",
-      "10 to 25 Devices  -  $23/day",
-      "25 to 50 Devices  -  $20/day",
+      "1 to 10 Devices   -  $25/day donation",
+      "10 to 25 Devices  -  $23/day donation",
+      "25 to 50 Devices  -  $20/day donation",
       "50+ Devices       -  Contact Us",
     ],
     button: {
