--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -28,7 +28,7 @@ const pricing = [
       "1 to 10 Devices   -  $25/day donation",
       "10 to 25 Devices  -  $23/day donation",
       "25 to 50 Devices  -  $20/day donation",
-      "50+ Devices       -  Contact Us",
+      "50+ Devices       -  Contact Us for Pricing",
     ],
     button: {
       text: "Learn More",
